[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Walls.gd" type="Script" id=2]
[ext_resource path="res://Player.png" type="Texture" id=3]
[ext_resource path="res://light.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 152 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 160 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -16.1826, -359.664, 15.7815, -359.803, 16.1899, -40.2096, -16.0543, -40.0475 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 40 )

[node name="World" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
texture = ExtResource( 3 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 2 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]
position = Vector2( 8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( -304, 0 )
shape = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="PlayerNode/Player"]
texture = ExtResource( 4 )
shadow_enabled = true

[node name="WallNode2" type="Node2D" parent="."]
position = Vector2( 280, 32 )

[node name="Walls" type="StaticBody2D" parent="WallNode2"]
script = ExtResource( 2 )

[node name="UpperWallSprite" type="Sprite" parent="WallNode2/Walls"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="UpperWallColl" type="CollisionShape2D" parent="WallNode2/Walls"]
position = Vector2( 0, -200 )
shape = SubResource( 3 )

[node name="UpperLightOccluder2D" type="LightOccluder2D" parent="WallNode2/Walls"]
occluder = SubResource( 4 )

[node name="LowerWallSprite" type="Sprite" parent="WallNode2/Walls"]
position = Vector2( 0, 200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="LowerWallColl" type="CollisionShape2D" parent="WallNode2/Walls"]
position = Vector2( 0, 200 )
shape = SubResource( 3 )

[node name="LowerLightOccluder2D" type="LightOccluder2D" parent="WallNode2/Walls"]
position = Vector2( 0, 400 )
occluder = SubResource( 4 )

[node name="PointArea" type="Area2D" parent="WallNode2/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallNode2/Walls/PointArea"]
shape = SubResource( 5 )

[node name="WallNode3" type="Node2D" parent="."]
position = Vector2( 368, 56 )

[node name="Walls" type="StaticBody2D" parent="WallNode3"]
script = ExtResource( 2 )

[node name="UpperWallSprite" type="Sprite" parent="WallNode3/Walls"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="UpperWallColl" type="CollisionShape2D" parent="WallNode3/Walls"]
position = Vector2( 0, -200 )
shape = SubResource( 3 )

[node name="UpperLightOccluder2D" type="LightOccluder2D" parent="WallNode3/Walls"]
occluder = SubResource( 4 )

[node name="LowerWallSprite" type="Sprite" parent="WallNode3/Walls"]
position = Vector2( 0, 200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="LowerWallColl" type="CollisionShape2D" parent="WallNode3/Walls"]
position = Vector2( 0, 200 )
shape = SubResource( 3 )

[node name="LowerLightOccluder2D" type="LightOccluder2D" parent="WallNode3/Walls"]
position = Vector2( 0, 400 )
occluder = SubResource( 4 )

[node name="PointArea" type="Area2D" parent="WallNode3/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallNode3/Walls/PointArea"]
shape = SubResource( 5 )

[node name="WallNode4" type="Node2D" parent="."]
position = Vector2( 456, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="StaticBody2D" parent="WallNode4"]
script = ExtResource( 2 )

[node name="UpperWallSprite" type="Sprite" parent="WallNode4/Walls"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="UpperWallColl" type="CollisionShape2D" parent="WallNode4/Walls"]
position = Vector2( 0, -200 )
shape = SubResource( 3 )

[node name="UpperLightOccluder2D" type="LightOccluder2D" parent="WallNode4/Walls"]
occluder = SubResource( 4 )

[node name="LowerWallSprite" type="Sprite" parent="WallNode4/Walls"]
position = Vector2( 0, 200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="LowerWallColl" type="CollisionShape2D" parent="WallNode4/Walls"]
position = Vector2( 0, 200 )
shape = SubResource( 3 )

[node name="LowerLightOccluder2D" type="LightOccluder2D" parent="WallNode4/Walls"]
position = Vector2( 0, 400 )
occluder = SubResource( 4 )

[node name="PointArea" type="Area2D" parent="WallNode4/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallNode4/Walls/PointArea"]
shape = SubResource( 5 )

[node name="WallNode5" type="Node2D" parent="."]
position = Vector2( 544, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="StaticBody2D" parent="WallNode5"]
script = ExtResource( 2 )

[node name="UpperWallSprite" type="Sprite" parent="WallNode5/Walls"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="UpperWallColl" type="CollisionShape2D" parent="WallNode5/Walls"]
position = Vector2( 0, -200 )
shape = SubResource( 3 )

[node name="UpperLightOccluder2D" type="LightOccluder2D" parent="WallNode5/Walls"]
occluder = SubResource( 4 )

[node name="LowerWallSprite" type="Sprite" parent="WallNode5/Walls"]
position = Vector2( 0, 200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="LowerWallColl" type="CollisionShape2D" parent="WallNode5/Walls"]
position = Vector2( 0, 200 )
shape = SubResource( 3 )

[node name="LowerLightOccluder2D" type="LightOccluder2D" parent="WallNode5/Walls"]
position = Vector2( 0, 400 )
occluder = SubResource( 4 )

[node name="PointArea" type="Area2D" parent="WallNode5/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallNode5/Walls/PointArea"]
shape = SubResource( 5 )

[node name="WallNode6" type="Node2D" parent="."]
position = Vector2( 632, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Walls" type="StaticBody2D" parent="WallNode6"]
script = ExtResource( 2 )

[node name="UpperWallSprite" type="Sprite" parent="WallNode6/Walls"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="UpperWallColl" type="CollisionShape2D" parent="WallNode6/Walls"]
position = Vector2( 0, -200 )
shape = SubResource( 3 )

[node name="UpperLightOccluder2D" type="LightOccluder2D" parent="WallNode6/Walls"]
occluder = SubResource( 4 )

[node name="LowerWallSprite" type="Sprite" parent="WallNode6/Walls"]
position = Vector2( 0, 200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="LowerWallColl" type="CollisionShape2D" parent="WallNode6/Walls"]
position = Vector2( 0, 200 )
shape = SubResource( 3 )

[node name="LowerLightOccluder2D" type="LightOccluder2D" parent="WallNode6/Walls"]
position = Vector2( 0, 400 )
occluder = SubResource( 4 )

[node name="PointArea" type="Area2D" parent="WallNode6/Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallNode6/Walls/PointArea"]
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = -24.0
margin_top = -136.0
margin_right = 24.0
margin_bottom = -96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.145098, 0.00392157, 0.141176, 1 )
position = Vector2( 80, 0 )
scale = Vector2( 200, 200 )
z_index = -5
texture = ExtResource( 3 )
[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
